fix: use the correct inputs again

--- a/.github/workflows/essentialsplugins-4Series-builds.yml
+++ b/.github/workflows/essentialsplugins-4Series-builds.yml
@@ -68,8 +68,8 @@ jobs:
         with:
           allowUpdates: true
           artifacts: 'output\*.*(cpz|cplz)'      
-          prerelease: ${{ needs.GetVersionNumber.outputs.channel != '' }}
-          tag: ${{ needs.GetVersionNumber.outputs.tag }}
+          prerelease: ${{ inputs.channel != '' }}
+          tag: ${{ inputs.tag }}
           commit: ${{ github.sha }}
           bodyFile: ./CHANGELOG.md
       - name: Setup Nuget
