--- a/.github/workflows/essentialsplugins-3Series-builds.yml
+++ b/.github/workflows/essentialsplugins-3Series-builds.yml
@@ -173,15 +173,15 @@ jobs:
         with:
           allowUpdates: true
           artifacts: 'output\*.*(zip)'
-          prerelease: ${{ needs.GetVersionNumber.outputs.channel != '' }}
-          tag: ${{ needs.GetVersionNumber.outputs.tag }}
+          prerelease: ${{ inputs.channel != '' }}
+          tag: ${{ inputs.tag }}
           commit: ${{ github.sha }}
           bodyFile: ./CHANGELOG.md
   Push_Nuget_Package:
     needs: Build_Project_3-Series
     runs-on: windows-latest
     env:
-      VERSION: ${{ needs.GetVersionNumber.outputs.version }}
+      VERSION: ${{ inputs.version }}
     steps:    
       - name: Download Build output
         uses: actions/download-artifact@v3
