--- a/.github/workflows/essentialsplugins-3Series-builds.yml
+++ b/.github/workflows/essentialsplugins-3Series-builds.yml
@@ -24,6 +24,7 @@ jobs:
     runs-on: windows-2019
     env:
       VERSION: ${{ inputs.version }}
+      BUILD_TYPE: ${{ inputs.channel == '' && 'Release' || 'Debug' }}
     steps:
       # First we checkout the source repo
       - name: Checkout repo
