--- a/.github/workflows/essentialsplugins-3Series-builds.yml
+++ b/.github/workflows/essentialsplugins-3Series-builds.yml
@@ -25,6 +25,7 @@ jobs:
     env:
       VERSION: ${{ inputs.version }}
       BUILD_TYPE: ${{ inputs.channel == '' && 'Release' || 'Debug' }}
+      NUSPEC_FILE: ''
     steps:
       # First we checkout the source repo
       - name: Checkout repo
@@ -144,28 +145,80 @@ jobs:
               Get-ChildItem -Recurse -Path "$($Env:GITHUB_WORKSPACE)" -include $filenames | Copy-Item -Destination ($destination) -Force
             }
           }
-          Get-ChildItem -Path $destination\*.cplz | Rename-Item -NewName { "$($_.BaseName)-$($Env:VERSION)$($_.Extension)" }
-          Compress-Archive -Path $destination -DestinationPath "$($Env:GITHUB_WORKSPACE)\$($Env:SOLUTION_FILE)-$($Env:VERSION).zip" -Force
-          Write-Host "Output Contents post Zip"
-          Get-ChildItem -Path $destination
-      # Write the version to a file to be consumed by the push jobs
-      - name: Write Version
-        run: Write-Output "$($Env:VERSION)" | Out-File -FilePath "$($Env:GITHUB_HOME)\output\version.txt"
-      # Upload output files
-      - name: Upload Build Output
-        uses: actions/upload-artifact@v3
-        with:
-          name: ${{ env.SOLUTION_FILE}}-${{ env.VERSION}}.zip
-          path: ./${{ env.SOLUTION_FILE}}-${{ env.VERSION}}.zip
-      # Upload the Version file as an artifact
-      - name: Upload version.txt
-        uses: actions/upload-artifact@v3
-        with:
-          name: Version
-          path: ${{env.GITHUB_HOME}}\output\version.txt
+          Get-ChildItem -Path $destination\*.cplz | Rename-Item -NewName { "$($_.BaseName)-$($Env:VERSION)$($_.Extension)" }          
+      - name: Remove Existing Nuspec Files
+        run: |
+          Get-ChildItem -Path .\ -Filter *.nuspec -Recurse | Remove-Item -Force
+      - name: Create Nuspec File
+        shell: powershell
+        run: |
+          $year = (Get-Date).Year
+          $repoFullName = "${{ github.repository }}" # Full repository name, including owner
+          $repoName = $repoFullName.Split('/')[-1] # Extracting the repository name part
+          $makeModelParts = $repoName -split '-'
+          $makeModel = $makeModelParts[1..($makeModelParts.Length - 1)] -join ' ' # Joining all parts after the first dash
+          $title = (Get-Culture).TextInfo.ToTitleCase($makeModel)
+          $makeModel = $title -replace ' ', '' # Removing spaces for the ID
+          $id = "PepperDash.Essentials.Plugin." + $makeModel
+          $nuspecContent = @"
+          <?xml version='1.0' encoding='utf-8'?>
+          <package>
+            <metadata>
+              <id>$id</id>
+              <version>${{ env.VERSION }}</version>
+              <title>$title</title>
+              <authors>PepperDash Technologies</authors>
+              <owners>pepperdash</owners>
+              <requireLicenseAcceptance>false</requireLicenseAcceptance>
+              <license type='file'>LICENSE.md</license>
+              <projectUrl>https://github.com/${{ github.repository }}</projectUrl>
+              <copyright>Copyright $year</copyright>
+              <description>${{ github.repository_name }} Epi</description>
+              <tags>crestron 3series</tags>
+              <repository type='git' url='https://github.com/${{ github.repository }}'/>
+            </metadata>
+            <files>
+              <file src='LICENSE.md' target=''/>
+              <file src='README.md' target=''/>
+              <file src='./output/**' target='lib\net35'/>
+              <file src='./output/**' target='lib\net47'/>
+            </files>
+          </package>
+          "@
+          echo $nuspecContent > ${{ github.workspace }}\project.nuspec
+      - name: Get nuget File 
+        shell: powershell
+        run: |
+          $nuspec_file = (Get-ChildItem *.nuspec -recurse).BaseName
+          echo "NUSPEC_FILE=$($nuspec_file)" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
+      # Pulls the nuget builder packages
+      - name: Add nuget.exe
+        if: ${{ !contains( env.NUSPEC_FILE, 'EssentialsPluginTemplate' ) }}
+        uses: nuget/setup-nuget@v2        
+      # Creating nuget Packages
+      - name: Add Github Packages source
+        if: ${{ !contains( env.NUSPEC_FILE, 'EssentialsPluginTemplate' ) }}
+        run: nuget sources add -name github -source https://nuget.pkg.github.com/pepperdash/index.json -username Pepperdash -password ${{ secrets.GITHUB_TOKEN }}
+    
+      - name: Create nuget package
+        if: ${{ !contains( env.NUSPEC_FILE, 'EssentialsPluginTemplate' ) }}
+        run: nuget pack "./project.nuspec" -version ${{ env.VERSION }}  
+      # Pushes to internal github registry
+          
+      - name: Publish nuget package to Github registry
+        if: ${{ !contains( env.NUSPEC_FILE, 'EssentialsPluginTemplate' ) }}
+        run: nuget push **/*.nupkg -source github -apikey ${{ secrets.GITHUB_TOKEN }} 
+      # Pushes to nuget gallery
+      - name: Add nuget.org API Key
+        if: github.repository_owner == 'PepperDash' && github.repository_visibility == 'public' && !contains(env.NUSPEC_FILE, 'EssentialsPluginTemplate')
+        run: nuget setApiKey ${{ secrets.NUGET_API_KEY }}
+
+      - name: Publish nuget package to nuget.org
+        if: github.repository_owner == 'PepperDash' && github.repository_visibility == 'public' && !contains(env.NUSPEC_FILE, 'EssentialsPluginTemplate')
+        run: nuget push **/*.nupkg -Source https://api.nuget.org/v3/index.json
       # Create the release on the source repo
       - name: Get release notes
-        uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v4
         with:
           name: change-log
       - name: Upload Release
@@ -173,40 +226,9 @@ jobs:
         uses: ncipollo/release-action@v1
         with:
           allowUpdates: true
-          artifacts: 'output\*.*(zip)'
+          artifacts: 'output\*.*(cplz|dll|xml)'
           prerelease: ${{ inputs.channel != '' }}
           tag: ${{ inputs.tag }}
           commit: ${{ github.sha }}
           bodyFile: ./CHANGELOG.md
-  Push_Nuget_Package:
-    needs: Build_Project_3-Series
-    runs-on: windows-latest
-    env:
-      VERSION: ${{ inputs.version }}
-    steps:    
-      - name: Download Build output
-        uses: actions/download-artifact@v3
-        with:
-          name: ${{ env.SOLUTION_FILE}}-${{ env.VERSION }}.zip
-          path: ./
-      - name: Unzip Build file
-        run: |
-          Get-ChildItem .\*.zip | Expand-Archive -DestinationPath .\
-          Remove-Item -Path .\*.zip
-      - name: Copy Files to root & delete output directory
-        run: |
-          Remove-Item -Path .\* -Include @("*.cpz","*.md","*.cplz","*.json","*.dll","*.clz")  
-          Get-ChildItem -Path .\output\* | Copy-Item -Destination .\
-          Remove-Item -Path .\output -Recurse
-      - name: Add nuget.exe
-        uses: nuget/setup-nuget@v1
-      - name: Add Github Packages source
-        run: nuget sources add -name github -source https://nuget.pkg.github.com/pepperdash/index.json -username pepperdash -password ${{ secrets.GITHUB_TOKEN }}
-      - name: Create nuget package
-        run: nuget pack "./epi-essentials-mobile-control.nuspec" -version ${{ env.VERSION }}
-      - name: Publish nuget package to Github registry
-        run: nuget push **/*.nupkg -source github
-      - name: Add nuget.org API Key
-        run: nuget setApiKey ${{ secrets.NUGET_API_KEY }}
-      - name: Publish nuget package to nuget.org
-        run: nuget push **/*.nupkg -Source https://api.nuget.org/v3/index.json
+      
