--- a/.github/workflows/essentialsplugins-3Series-builds.yml
+++ b/.github/workflows/essentialsplugins-3Series-builds.yml
@@ -19,6 +19,9 @@ on:
         description: 'The channel of the image to build and push'
         required: true
         type: string 
+permissions:
+  contents: write
+  packages: write
 jobs:
   Build_Project_3-Series:
     runs-on: windows-2019
