--- a/.github/workflows/essentialsplugins-4Series-builds.yml
+++ b/.github/workflows/essentialsplugins-4Series-builds.yml
@@ -66,7 +66,7 @@ jobs:
       - name: Setup Nuget
         run: | 
           nuget sources add -name github -source https://nuget.pkg.github.com/pepperdash/index.json -username pepperdash -password ${{ secrets.GITHUB_TOKEN }}
-          nuget setApiKey ${{ secrets.GITHUB_TOKEN }} -Source github          
+          nuget setApiKey ${{ secrets.GITHUB_TOKEN }} -Source https://nuget.pkg.github.com/pepperdash/index.json          
           nuget setApiKey ${{ secrets.NUGET_API_KEY }} -Source https://api.nuget.org/v3/index.json          
       - name: Publish to Nuget
         run: nuget push .\output\*.nupkg -Source https://api.nuget.org/v3/index.json
