fix: explicitly set API key for push

--- a/.github/workflows/essentialsplugins-4Series-builds.yml
+++ b/.github/workflows/essentialsplugins-4Series-builds.yml
@@ -66,9 +66,9 @@ jobs:
       - name: Setup Nuget
         run: | 
           nuget sources add -name github -source https://nuget.pkg.github.com/pepperdash/index.json -username pepperdash -password ${{ secrets.GITHUB_TOKEN }}
-          nuget setApiKey ${{ secrets.GITHUB_TOKEN }} -Source https://nuget.pkg.github.com/pepperdash/index.json          
+          nuget setApiKey ${{ secrets.GITHUB_TOKEN }} -Source github          
           nuget setApiKey ${{ secrets.NUGET_API_KEY }} -Source https://api.nuget.org/v3/index.json          
       - name: Publish to Nuget
         run: nuget push .\output\*.nupkg -Source https://api.nuget.org/v3/index.json
       - name: Publish to Github Nuget
-        run: nuget push .\output\*.nupkg -Source github
+        run: nuget push .\output\*.nupkg -Source github -ApiKey ${{secrets.GITHUB_TOKEN }}
