fix: put GH_TOKEN on correct step

--- a/.github/workflows/essentialsplugins-getversion.yml
+++ b/.github/workflows/essentialsplugins-getversion.yml
@@ -55,6 +55,8 @@ jobs:
     - name: Get version number
       id: get_version
       run: npx --package=semantic-release --package=@semantic-release/commit-analyzer --package=@semantic-release/release-notes-generator --package=@semantic-release/changelog --package=@semantic-release/exec -- semantic-release
+      env:
+        GH_TOKEN: ${{ secrets.GITHUB_TOKEN}}
     - name: Print summary if no new version
       if: steps.get_version.outputs.newVersion != 'true'
       env:
