--- a/.github/workflows/essentialsplugins-builds.yml
+++ b/.github/workflows/essentialsplugins-builds.yml
@@ -263,12 +263,11 @@ jobs:
       - name: Set Version Number  
         shell: powershell
         run: |
-          Get-ChildItem "./Version"
-          $version = Get-Content -Path ./Version/version.txt
+          Get-ChildItem "./"
+          $version = Get-Content -Path ./version.txt
           Write-Host "Version: $version"
           echo "VERSION=$version" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
-          Remove-Item -Path ./Version/version.txt
-          Remove-Item -Path ./Version
+          Remove-Item -Path ./version.txt
           # Add this step to remove existing .nuspec files
 
       - name: Remove Existing Nuspec Files
