--- a/.github/workflows/essentialsplugins-3Series-builds.yml
+++ b/.github/workflows/essentialsplugins-3Series-builds.yml
@@ -93,6 +93,7 @@ jobs:
         with:
           username: ${{ secrets.DOCKERHUB_USER }}
           password: ${{ secrets.DOCKERHUB_PASSWORD }}
+        
       # Build the solutions in the docker image
       - name: Get SLN Path 
         shell: powershell
@@ -102,27 +103,30 @@ jobs:
           $solution_path = $solution_path -replace "(?:[^\\]*\\){4}", ""
           Write-Output $solution_path
           echo "SOLUTION_PATH=$($solution_path)" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
+        
         # Set the SOLUTION_FILE
       - name: Get SLN File 
         shell: powershell
         run: |
           $solution_file = Get-ChildItem .\*.3Series.sln -recurse -Path "$($Env:GITHUB_WORKSPACE)" 
           echo "SOLUTION_FILE=$($solution_file.BaseName)"| Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
+        
       - name: Build Solution
         shell: powershell
         run: |
           Invoke-Expression "docker run --rm --mount type=bind,source=""$($Env:GITHUB_WORKSPACE)"",target=""c:/project"" pepperdash/sspbuilder c:\cihelpers\vsidebuild.exe -Solution ""c:\project\$($Env:SOLUTION_PATH)"" -BuildSolutionConfiguration $($ENV:BUILD_TYPE)"
+      
       # Zip up the output files as needed
       - name: Zip Build Output
         shell: powershell
         run: |
-          $destination = "$($Env:GITHUB_HOME)\output"
+          $destination = "$($Env:GITHUB_WORKSPACE)\output"
           New-Item -ItemType Directory -Force -Path ($destination)
           Get-ChildItem ($destination)
-          $exclusions = @("packages", "4-series")
+          $exclusions = "packages"
           # Trying to get any .json schema files (not currently working)
           # Gets any files with the listed extensions.
-          Get-ChildItem -recurse -Path "$($Env:GITHUB_WORKSPACE)" -include "*.clz", "*.cpz", "*.cplz", "*.nuspec" | ForEach-Object {
+          Get-ChildItem -recurse -Path "$($Env:GITHUB_WORKSPACE)" -include "*.clz", "*.cpz", "*.cplz", "*.nuspec", "*.md" | ForEach-Object {
             $allowed = $true;
             # Exclude any files in submodules
             foreach ($exclude in $exclusions) {
@@ -148,10 +152,15 @@ jobs:
               Get-ChildItem -Recurse -Path "$($Env:GITHUB_WORKSPACE)" -include $filenames | Copy-Item -Destination ($destination) -Force
             }
           }
-          Get-ChildItem -Path $destination\*.cplz | Rename-Item -NewName { "$($_.BaseName)-$($Env:VERSION)$($_.Extension)" }          
+          Get-ChildItem -Path $destination\*.cplz | Rename-Item -NewName { "$($_.BaseName)-$($Env:VERSION)$($_.Extension)" }
+          # Compress-Archive -Path $destination -DestinationPath "$($Env:GITHUB_WORKSPACE)\$($Env:SOLUTION_FILE)-$($Env:VERSION).zip" -Force
+          # Write-Host "Output Contents post Zip"
+          Get-ChildItem -Path $destination
+        
       - name: Remove Existing Nuspec Files
         run: |
           Get-ChildItem -Path .\ -Filter *.nuspec -Recurse | Remove-Item -Force
+        
       - name: Create Nuspec File
         shell: powershell
         run: |
@@ -189,16 +198,19 @@ jobs:
           </package>
           "@
           echo $nuspecContent > ${{ github.workspace }}\project.nuspec
+      
       - name: Get nuget File 
         shell: powershell
         run: |
           $nuspec_file = (Get-ChildItem *.nuspec -recurse).BaseName
           echo "NUSPEC_FILE=$($nuspec_file)" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
+      
       # Pulls the nuget builder packages
       - name: Add nuget.exe
         if: ${{ !contains( env.NUSPEC_FILE, 'EssentialsPluginTemplate' ) }}
         uses: nuget/setup-nuget@v2        
-      # Creating nuget Packages
+      
+        # Creating nuget Packages
       - name: Add Github Packages source
         if: ${{ !contains( env.NUSPEC_FILE, 'EssentialsPluginTemplate' ) }}
         run: nuget sources add -name github -source https://nuget.pkg.github.com/pepperdash/index.json -username Pepperdash -password ${{ secrets.GITHUB_TOKEN }}
@@ -219,17 +231,19 @@ jobs:
       - name: Publish nuget package to nuget.org
         if: github.repository_owner == 'PepperDash' && github.repository_visibility == 'public' && !contains(env.NUSPEC_FILE, 'EssentialsPluginTemplate')
         run: nuget push *.nupkg -Source https://api.nuget.org/v3/index.json
-      # Create the release on the source repo
+      
+        # Create the release on the source repo
       - name: Get release notes
         uses: actions/download-artifact@v4
         with:
           name: change-log
+      
       - name: Upload Release
         id: create_release
         uses: ncipollo/release-action@v1
         with:
           allowUpdates: true
-          artifacts: 'output\*.*(cplz|dll|xml)'
+          artifacts: output\*.*(cplz|dll|xml)
           prerelease: ${{ inputs.channel != '' }}
           tag: ${{ inputs.tag }}
           commit: ${{ github.sha }}
