feat: add nuspec file creation and cleanup step in workflow

--- a/.github/workflows/essentialsplugins-4Series-builds.yml
+++ b/.github/workflows/essentialsplugins-4Series-builds.yml
@@ -63,6 +63,44 @@ jobs:
           tag: ${{ inputs.tag }}
           commit: ${{ github.sha }}
           bodyFile: ./CHANGELOG.md
+      - name: Remove Existing Nuspec Files
+        run: |
+          Get-ChildItem -Path .\ -Filter *.nuspec -Recurse | Remove-Item -Force
+          - name: Create Nuspec File
+            shell: powershell
+            run: |
+              $year = (Get-Date).Year
+              $repoFullName = "${{ github.repository }}" # Full repository name, including owner
+              $repoName = $repoFullName.Split('/')[-1] # Extracting the repository name part
+              $makeModelParts = $repoName -split '-'
+              $makeModel = $makeModelParts[1..($makeModelParts.Length - 1)] -join ' ' # Joining all parts after the first dash
+              $title = (Get-Culture).TextInfo.ToTitleCase($makeModel)
+              $makeModel = $title -replace ' ', '' # Removing spaces for the ID
+              $id = "PepperDash.Essentials.Plugin." + $makeModel
+              $nuspecContent = @"
+              <?xml version='1.0' encoding='utf-8'?>
+              <package>
+                <metadata>
+                  <id>$id</id>
+                  <version>${{ inputs.version }}</version>
+                  <title>$title</title>
+                  <authors>PepperDash Technologies</authors>
+                  <owners>pepperdash</owners>
+                  <requireLicenseAcceptance>false</requireLicenseAcceptance>
+              <license type='expression'>MIT</license>
+              <projectUrl>https://github.com/${{ github.repository }}</projectUrl>
+              <copyright>Copyright $year</copyright>
+              <description>${{ github.repository_name }} Epi</description>
+              <tags>crestron 3series 4series</tags>
+              <repository type='git' url='https://github.com/${{ github.repository }}'/>
+            </metadata>
+            <files>
+              <file src='**' target='lib\net35'/>
+              <file src='**' target='lib\net47'/>
+            </files>
+          </package>
+          "@
+          echo $nuspecContent > ${{ github.workspace }}\project.nuspec
       - name: Setup Nuget
         run: | 
           nuget sources add -name github -source https://nuget.pkg.github.com/pepperdash/index.json -username pepperdash -password ${{ secrets.GITHUB_TOKEN }}
