fix: add conditional bypass for package name check in workflow

--- a/.github/workflows/essentialsplugins-4Series-builds.yml
+++ b/.github/workflows/essentialsplugins-4Series-builds.yml
@@ -57,6 +57,7 @@ jobs:
         with:
           name: change-log
       - name: Check Package Name
+        if: ${{ inputs.bypassPackageCheck != 'true' }}
         shell: powershell
         run: |
           # Extract the repository name
