--- a/.github/workflows/essentialsplugins-checkCommitMessage.yml
+++ b/.github/workflows/essentialsplugins-checkCommitMessage.yml
@@ -16,19 +16,20 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Check Commit Message
+      - name: Check Commit Messages
         shell: bash
         run: |
-          # Retrieve the commit message from the latest commit
-          COMMIT_MSGS=$(git log -1 --pretty=format:"%s")
+          # Retrieve all commit messages from the current merge (HEAD~1..HEAD for merge commit or all in a PR)
+          COMMIT_MSGS=$(git log --pretty=format:"%s" HEAD~1..HEAD)
       
-          # Define a regular expression to match the conventional commit pattern
+          # Define a regular expression to match the conventional commit pattern or a standard merge commit message
           CONVENTIONAL_REGEX="^(feat|fix|chore|docs|style|refactor|perf|test|build|ci|revert|wip)(\\(.+\\))?:\\s.+"
+          MERGE_COMMIT_REGEX="^Merge (branch|remote-tracking branch) '.*'( into .*)?$"
       
-          # Loop through each commit message and check against the conventional pattern
-          for COMMIT_MSG in "$COMMIT_MSGS"; do
-            if [[ ! $COMMIT_MSG =~ $CONVENTIONAL_REGEX ]]; then
-              echo "::error::Commit message '$COMMIT_MSG' does not follow the Conventional Commits format. Please use a message like 'feat: add new feature' or 'fix(scope): correct issue'."
+          # Loop through each commit message and check against the patterns
+          for COMMIT_MSG in $COMMIT_MSGS; do
+            if [[ ! $COMMIT_MSG =~ $CONVENTIONAL_REGEX && ! $COMMIT_MSG =~ $MERGE_COMMIT_REGEX ]]; then
+              echo "::error::Commit message '$COMMIT_MSG' does not follow the Conventional Commits format or merge commit format. Please use a message like 'feat: add new feature' or 'fix(scope): correct issue'."
               exit 1
             else
               echo "Commit message '$COMMIT_MSG' is valid."
