--- a/.github/workflows/essentialsplugins-checkCommitMessage.yml
+++ b/.github/workflows/essentialsplugins-checkCommitMessage.yml
@@ -15,17 +15,19 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0  # Fetch the full history to make HEAD~1 references valid
 
       - name: Check Commit Messages
         shell: bash
         run: |
-          # Retrieve the last commit messages. For merge commits, it will retrieve the latest commit message.
+          # Retrieve the latest commit message
           COMMIT_MSGS=$(git log --pretty=format:"%s" -n 1)
-        
+      
           # Define a regular expression to match the conventional commit pattern or a standard merge commit message
           CONVENTIONAL_REGEX="^(feat|fix|chore|docs|style|refactor|perf|test|build|ci|revert|wip)(\\(.+\\))?:\\s.+"
-          MERGE_COMMIT_REGEX="^Merge (branch|remote-tracking branch) '.*'( into .*)?$"
-        
+          MERGE_COMMIT_REGEX="^(Merge (branch|remote-tracking branch|commit) '.*'( into .*)?)$"
+      
           # Loop through each commit message and check against the patterns
           for COMMIT_MSG in "$COMMIT_MSGS"; do
             if [[ ! $COMMIT_MSG =~ $CONVENTIONAL_REGEX && ! $COMMIT_MSG =~ $MERGE_COMMIT_REGEX ]]; then
