fix(workflow): update script path and target directory
- Add target directory argument to metadata.py script execution
- Add debug output (pwd and ls) to help troubleshoot GitHub workflow
- Fix script execution path to work with readme-automation checkout

--- a/.github/workflows/update-readme.yml
+++ b/.github/workflows/update-readme.yml
@@ -40,7 +40,9 @@ jobs:
 
       - name: Run README Update Script
         run: |
-          python readme-automation/.github/scripts/metadata.py
+          pwd
+          ls -la
+          python readme-automation/.github/scripts/metadata.py .
 
       - name: Check for Changes
         id: check_for_changes
