--- a/.github/workflows/update-readme.yml
+++ b/.github/workflows/update-readme.yml
@@ -27,7 +27,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           repository: PepperDash/workflow-templates
-          ref: add-feedbacks
+          ref: development
           path: workflow-templates
 
       - name: Set up Python
