--- a/.github/workflows/essentialsplugins-4Series-builds.yml
+++ b/.github/workflows/essentialsplugins-4Series-builds.yml
@@ -30,9 +30,9 @@ jobs:
   Build_Project_4-Series:
     runs-on: windows-latest
     steps:
-      # First we checkout the source repo
       - name: Checkout repo
         uses: actions/checkout@v4     
+
       - name: Get SLN Info
         id: get_sln_info
         shell: powershell
@@ -46,27 +46,38 @@ jobs:
           $solution_path = $solution_path -replace "(?:[^\\]*\\){4}", ""
           Write-Output $solution_path
           echo "SOLUTION_PATH=$($solution_path)" | Out-File -FilePath $env:GITHUB_OUTPUT -Encoding utf8 -Append          
+
       - name: Setup MS Build
         uses: microsoft/setup-msbuild@v1.1
-      - name: restore Nuget Packages
+
+      - name: Restore Nuget Packages
         run: nuget restore .\${{ steps.get_sln_info.outputs.SOLUTION_FILE }}.sln
+
       - name: Build Solution        
         run: msbuild .\${{ steps.get_sln_info.outputs.SOLUTION_FILE }}.sln /p:Platform="Any CPU" /p:Configuration="$($ENV:BUILD_TYPE)" /p:Version="${{ inputs.version }}" /p:IncludeSourceRevisionInInformationalVersion=false -m   
+
       - name: Get release notes
         uses: actions/download-artifact@v4
         with:
           name: change-log
+
       - name: Check Package Name
         shell: powershell
         run: |
+          if ("${{ inputs.bypassPackageCheck }}" -eq "true") {
+            Write-Output "Bypassing package name check."
+            exit 0
+          }
+
           # Extract the repository name
           $repoFullName = "${{ github.repository }}" # Full repository name, including owner
           $repoName = $repoFullName.Split('/')[-1] # Extracting the repository name part
       
           # Expected package name format: PepperDash.Essentials.Plugins.Make.Model
           $expectedPackageName = "PepperDash.Essentials.Plugins." + ($repoName -replace 'epi-', '').Replace('-', '.')
-      
-          # Display expected package name
+
+          # Debug output
+          Write-Output "Repository Name: $repoName"
           Write-Output "Expected Package Name: $expectedPackageName"
       
           # Locate the generated NuGet package in the output directory
@@ -85,6 +96,7 @@ jobs:
             echo "::error::Package name mismatch: Expected '$expectedPackageName' but found '$packageName'. Ensure the package name follows the repository naming convention."
             exit 1
           }
+
       - name: Upload Release
         if: ${{ inputs.newVersion == 'true' }}
         id: create_release
@@ -96,12 +108,15 @@ jobs:
           tag: ${{ inputs.tag }}
           commit: ${{ github.sha }}
           bodyFile: ./CHANGELOG.md
+
       - name: Setup Nuget
         run: | 
           nuget sources add -name github -source https://nuget.pkg.github.com/pepperdash/index.json -username pepperdash -password ${{ secrets.GITHUB_TOKEN }}
           nuget setApiKey ${{ secrets.GITHUB_TOKEN }} -Source github          
           nuget setApiKey ${{ secrets.NUGET_API_KEY }} -Source https://api.nuget.org/v3/index.json          
+
       - name: Publish to Nuget
         run: nuget push .\output\*.nupkg -Source https://api.nuget.org/v3/index.json
+
       - name: Publish to Github Nuget
         run: nuget push .\output\*.nupkg -Source github -ApiKey ${{secrets.GITHUB_TOKEN }}
