--- a/.github/workflows/essentialsplugins-3Series-builds.yml
+++ b/.github/workflows/essentialsplugins-3Series-builds.yml
@@ -223,17 +223,19 @@ jobs:
         run: nuget pack "./project.nuspec" -version ${{ env.VERSION }}  
       # Pushes to internal github registry
           
-      - name: Publish nuget package to Github registry
-        if: ${{ !contains( env.NUSPEC_FILE, 'EssentialsPluginTemplate' ) }}
-        run: nuget push *.nupkg -source github -apikey ${{ secrets.GITHUB_TOKEN }} 
-      # Pushes to nuget gallery
-      - name: Add nuget.org API Key
-        if: github.repository_owner == 'PepperDash' && github.repository_visibility == 'public' && !contains(env.NUSPEC_FILE, 'EssentialsPluginTemplate')
-        run: nuget setApiKey ${{ secrets.NUGET_API_KEY }}
+      - name: Setup and Publish to github feed
+        run: |
+          nuget sources add -name github -source https://nuget.pkg.github.com/${{ github.repository_owner }}/index.json -username pepperdash -password ${{ secrets.GITHUB_TOKEN }}
+          nuget push **/*.nupkg -source github -apikey ${{ secrets.GITHUB_TOKEN }} 
 
-      - name: Publish nuget package to nuget.org
-        if: github.repository_owner == 'PepperDash' && github.repository_visibility == 'public' && !contains(env.NUSPEC_FILE, 'EssentialsPluginTemplate')
-        run: nuget push *.nupkg -Source https://api.nuget.org/v3/index.json
+      - name: Setup Nuget
+        if: github.repository_owner == 'PepperDash' && github.repository_visibility == 'public'
+        run: |      
+          nuget setApiKey ${{ secrets.NUGET_API_KEY }} -Source https://api.nuget.org/v3/index.json          
+
+      - name: Publish to Nuget
+        if: github.repository_owner == 'PepperDash' && github.repository_visibility == 'public'
+        run: nuget push .\output\*.nupkg -Source https://api.nuget.org/v3/index.json
       
         # Create the release on the source repo
       - name: Get release notes
