--- a/.github/workflows/essentialsplugins-4Series-builds.yml
+++ b/.github/workflows/essentialsplugins-4Series-builds.yml
@@ -96,6 +96,9 @@ jobs:
             echo "::error::Package name mismatch: Expected '$expectedPackageName' but found '$packageName'. Ensure the package name follows the repository naming convention."
             exit 1
           }
+          
+          echo "PACKAGE_PATH=$($packageFile.FullName)" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
+
 
       - name: Upload Release
         if: ${{ inputs.newVersion == 'true' }}
@@ -112,7 +115,8 @@ jobs:
       - name: Setup and Publish to github feed
         run: |
           nuget sources add -name github -source https://nuget.pkg.github.com/${{ github.repository_owner }}/index.json -username pepperdash -password ${{ secrets.GITHUB_TOKEN }}
-          nuget push **/*.nupkg -source github -apikey ${{ secrets.GITHUB_TOKEN }} 
+          # nuget push **/*.nupkg -source github -apikey ${{ secrets.GITHUB_TOKEN }} 
+          nuget push "${{ env.PACKAGE_PATH }}" -source github -apikey ${{ secrets.GITHUB_TOKEN }} 
 
       - name: Setup Nuget
         if: github.repository_owner == 'PepperDash' && github.repository_visibility == 'public'
