fix(workflow): correct nuget push command to ensure proper path usage for package publishing

--- a/.github/workflows/essentialsplugins-3Series-builds.yml
+++ b/.github/workflows/essentialsplugins-3Series-builds.yml
@@ -235,7 +235,9 @@ jobs:
           if (-not (nuget sources list | Select-String -Pattern "https://nuget.pkg.github.com/${{ github.repository_owner }}/index.json")) {
             nuget sources add -name github -source https://nuget.pkg.github.com/${{ github.repository_owner }}/index.json -username pepperdash -password ${{ secrets.GITHUB_TOKEN }}
           }
-          nuget push ./output/*.nupkg -source github -apikey ${{ secrets.GITHUB_TOKEN }} 
+          # nuget push **/*.nupkg -source github -apikey ${{ secrets.GITHUB_TOKEN }} 
+          # nuget push ./output/*.nupkg -source github -apikey ${{ secrets.GITHUB_TOKEN }} 
+          nuget push .\output\*.nupkg -source github -apikey ${{ secrets.GITHUB_TOKEN }} 
 
       # Pushes to nuget.org Only if the repo is public and the owner is PepperDash
       - name: Setup Nuget
