fix(workflow): update path check for NuGet package existence to ensure correct directory usage

--- a/.github/workflows/essentialsplugins-3Series-builds.yml
+++ b/.github/workflows/essentialsplugins-3Series-builds.yml
@@ -227,7 +227,8 @@ jobs:
       # Pushes to internal github registry
       - name: Setup and Publish to github feed
         run: |
-          if (-not (Test-Path -Path "./output/*.nupkg")) {
+          # if (-not (Test-Path -Path "./output/*.nupkg")) {
+          if (-not (Test-Path -Path ".\output\*.nupkg")) {
             Write-Error "No NuGet package found in the output directory. Check if the build process created the package correctly."
             exit 1
           }          
